# skim-unicode-table

./: .gitmodules  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: build-and-prelease.yml  build-and-release.yml  test-install.yml
print-unicode-table/: Cargo.toml
print-unicode-table/src/: main.rs
scripts/: skim-unicode-table  skim-unicode-table-xsel
skim_unicode_table/: render_glyph.py  run-xsel.sh  run.sh
